k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: wanderlust
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wander-back
      env: stage
  template:
    metadata:
      labels:
        app: wander-back
        env: stage
    spec:
      nodeSelector:
        env: stage
        type: local
      containers:
        - name: backend-con
          image: ayushdocker2607/prod-wander-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "200m"
              memory: "400Mi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
