k8s/frontend-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deploy 
  namespace: wanderlust 

spec:
  selector:
    matchLabels:
      app: frontend 
      env: stage 
  template:
    metadata:
      labels:
        app: frontend
        env: stage 
    spec:
      nodeSelector:
        type: local 
        env: stage
      containers:
      - name: frontend-con 
        image: ayushdocker2607/prod-wander-front:latest 
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "250Mi"
          limits:
            cpu: "200m"
            memory: "350Mi"
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 25
          failureThreshold: 3
          timeoutSeconds: 3
          periodSeconds: 5
