k8s/mongo-deploy.yaml
kind: Deployment 
apiVersion: apps/v1 
metadata:
  name: mongo-deploy 
  namespace: wanderlust 

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo 
      env: stage 
  template:
    metadata:
      labels: 
        app: mongo 
        env: stage 
    spec:
      nodeSelector:
        type: local
        env: stage 
      containers:
      - name: mongo-con 
        image: docker.io/library/mongo:4.4 
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "100m"
            memory: "250Mi"
          limits:
            cpu: "200m"
            memory: "350Mi"

        volumeMounts:
        - name: mongo-vol 
          mountPath: /data/db 
      volumes:
      - name: mongo-vol 
        persistentVolumeClaim:
          claimName: mongo-pvc
