k8s/mongo-statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1 
metadata:
  name: mongo-statefulset 
  namespace: wanderlust 

spec:
  serviceName: mongo-svc 
  replicas: 1
  selector:
    matchLabels:
       app: mongo 
       env: stage 
  template:
      metadata:
        labels:
           app: mongo 
           env: stage
      spec:
        nodeSelector:
          type: local
          env: stage
        containers:
        - name: mongo-con 
          image: docker.io/library/mongo:4.4 
          ports:
          - containerPort: 27017 
          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "200m"
              memory: "350Mi"
          volumeMounts:
          - name: mongo-vol 
            mountPath: /data/db 

  volumeClaimTemplates:
  - metadata: 
      name: mongo-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
