k8s/redis-deploy.yaml
kind: Deployment 
apiVersion: apps/v1 
metadata:
  name: redis-deploy 
  namespace: wanderlust 

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis 
      env: stage
  
  template:
    metadata:
      labels:
        app: redis
        env: stage
    spec:
      nodeSelector:
        type: local 
        env: stage 
      containers:
      - name: redis-con 
        image: redis:7.0
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "100m"
            memory: "250Mi"
          limits:
            cpu: "200m"
            memory: "350Mi"
