k8s/frontend-svc.yaml
kind: Service
apiVersion: v1 
metadata:
  name: frontend-svc 
  namespace: wanderlust

spec:
  selector:
    app: frontend 
    env: stage
  type: ClusterIP 
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP 
    name: frontend
