k8s/mongo-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo-svc 
  namespace: wanderlust 

spec:
  selector:
    app: mongo
    env: stage 
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP 
    name: mongo
